--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -31,10 +31,10 @@
       "station_meta": ["curw_kottawa_dharmapala_north", "Kottawa North Dharmapala School", 6.865576, 79.958181, 0, "Kottawa North Dharmapala School"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tick"],
-      "units": ["mm", "oC", "-"],
-      "max_values": ["120", "40", "1"],
-      "min_values": ["0", "0", "0"],
+      "variables": ["Precipitation", "Temperature", "Tick", "WindSpeed", "WindDirection", "Humidity"],
+      "units": ["mm", "oC", "-", "m/s", "degrees", "%"],
+      "max_values": ["120", "40", "1", "30", "360", "100"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Kottawa North Dharmapala School",
       "run_name": "A&T Labs"
     },
