--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -13,42 +13,6 @@
   },
   "stations": [
     {
-      "stationId": "curw_mulleriyawa",
-      "name": "Mulleriyawa",
-      "station_meta": ["curw_mulleriyawa", "Mulleriyawa", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Tick"],
-      "units": ["mm", "-"],
-      "max_values": ["120", "1"],
-      "min_values": ["0", "0"],
-      "description": "A&T Communication Box, Texas Standard Rain Gauge",
-      "run_name": "A&T Labs"
-    }, {
-      "stationId": "curw_mutwal",
-      "name": "Mutwal",
-      "station_meta": ["curw_mutwal", "Mutwal", 6.95871 , 79.86090, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Tick"],
-      "units": ["mm", "-"],
-      "max_values": ["120", "1"],
-      "min_values": ["0", "0"],
-      "description": "A&T Communication Box, Texas Standard Rain Gauge",
-      "run_name": "A&T Labs"
-    }, {
-      "stationId": "curw_malabe",
-      "name": "Malabe",
-      "station_meta": ["curw_malabe", "Malabe", 6.90396 , 79.95738, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Tick"],
-      "units": ["mm", "-"],
-      "max_values": ["120", "1"],
-      "min_values": ["0", "0"],
-      "description": "A&T Communication Box, Texas Standard Rain Gauge",
-      "run_name": "A&T Labs"
-    },{
       "stationId": "curw_ambewela",
       "name": "Ambewela Farm",
       "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
@@ -80,10 +44,10 @@
       "station_meta": ["curw_kottawa_dharmapala_north", "Kottawa North Dharmapala School", 6.865576, 79.958181, 0, "Kottawa North Dharmapala School"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tick", "WindSpeed", "WindDirection", "Humidity"],
-      "units": ["mm", "oC", "-", "m/s", "degrees", "%"],
-      "max_values": ["120", "40", "1", "30", "360", "100"],
-      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
       "description": "Kottawa North Dharmapala School",
       "run_name": "A&T Labs"
     },
@@ -106,11 +70,50 @@
       "station_meta": ["curw_waga", "Waga", 6.906780, 80.118275, 0, "Waga Station"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tick"],
-      "units": ["mm", "oC", "-"],
-      "max_values": ["120", "40", "1"],
-      "min_values": ["0", "0", "0"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
       "description": "WAGA STATION",
+      "run_name": "A&T Labs"
+    },
+    {
+      "stationId": "curw_mutwal",
+      "name": "Mutwal",
+      "station_meta": ["curw_mutwal", "Mutwal", 6.95871 , 79.86090, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
+      "description": "A&T Communication Box, Texas Standard Rain Gauge",
+      "run_name": "A&T Labs"
+    },
+    {
+      "stationId": "curw_malabe",
+      "name": "Malabe",
+      "station_meta": ["curw_malabe", "Malabe", 6.90396 , 79.95738, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
+      "description": "A&T Communication Box, Texas Standard Rain Gauge",
+      "run_name": "A&T Labs"
+    },
+    {
+      "stationId": "curw_ambewela",
+      "name": "Ambewela Farm",
+      "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
+      "description": "A&T Communication Box, Texas Standard Rain Gauge",
       "run_name": "A&T Labs"
     },
     {
@@ -126,21 +129,6 @@
       "description": "District Secretariat Office Jaffna",
       "run_name": "CUrW IoT",
       "wunderground": {"stationId": "IJAFFNAP2", "password": "xjkyw8cn"}
-    },
-    {
-      "stationId": "curw_hingurana",
-      "name": "Hingurana",
-      "station_meta": ["curw_hingurana", "Hingurana", 6.904552, 80.407895, 0, "Hingurana Station"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindGust", "WindDirection", "Humidity", "SolarRadiation"],
-      "units": ["mm", "oC", "m/s", "m/s", "degrees", "%", "W/m2"],
-      "max_values": ["120", "40", "30", "30", "360", "100", "1413"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "0"],
-      "description": "HINGURANA STATION",
-      "run_name": "CUrW IoT",
-      "wunderground": {"stationId": "IKEGALLE2", "password": "xt0eouz2"},
-      "dialog": {"stationId": "Hingurana", "password": "3674010756837033"}
     },
     {
       "stationId": "curw_uduwawala",
@@ -183,6 +171,32 @@
       "description": "Baththaramulla",
       "run_name": "CUrW IoT",
       "basin": "KLB"
+    },
+    {
+      "stationId": "curw_mulleriyawa",
+      "name": "Mulleriyawa",
+      "station_meta": ["curw_mulleriyawa", "Mulleriyawa", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
+      "description": "A&T Communication Box, Texas Standard Rain Gauge",
+      "run_name": "A&T Labs"
+    },
+    {
+      "stationId": "curw_thurstan_college",
+      "name": "Thurstan College",
+      "station_meta": ["curw_thurstan_college", "Thurstan College", 6.90293, 79.85932, 0, "Leecom station with their own Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Thurstan College",
+      "run_name": "Leecom"
     }
   ]
 }
