--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -104,6 +104,19 @@
       "run_name": "A&T Labs"
     },
     {
+      "stationId": "curw_dickoya",
+      "name": "Dickoya",
+      "station_meta": ["curw_dickoya", "Dickoya", 6.8722 , 80.60312 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
+      "description": "A&T Communication Box, Texas Standard Rain Gauge",
+      "run_name": "A&T Labs"
+    },
+    {
       "stationId": "curw_ambewela",
       "name": "Ambewela Farm",
       "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
