--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -11,7 +11,7 @@
     "MYSQL_PASSWORD": "curw@123",
     "MYSQL_DB": "curw"
   },
-  "stations": [
+  "weather_stations": [
     {
       "stationId": "curw_ambewela",
       "name": "Ambewela Farm",
@@ -225,6 +225,51 @@
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
       "run_name": "A&T Labs"
+    }
+  ],
+  "water_level_stations": [
+    {
+      "stationId": "curw_wl_test",
+      "name": "Leecom WL Guage",
+      "station_meta": ["curw_wl_test", "Leecom WL Guage", 6.890585, 80.802551, 0, "Leecom water level guage, testing station"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Leecom water level guage, testing station",
+      "run_name": "Leecom",
+      "mean_sea_level": 2.981
+    },
+    {
+      "stationId": "curw_wl_diyasaru_uyana",
+      "name": "Diyasaru Uyana",
+      "station_meta": ["curw_wl_diyasaru_uyana", "Diyasaru Uyana", 6.890585 , 80.802551, 0, "Yantai water level guage, A&T communication"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Yantai water level guage, A&T communication",
+      "run_name": "A&T Labs",
+      "mean_sea_level": 2.896
+
+    },
+    {
+      "stationId": "curw_wl_janakalakendraya",
+      "name": "Janakala Kendraya",
+      "station_meta": ["curw_wl_janakalakendraya", "Janakala Kendraya", 6.892276, 79.921876, 0, "Leecom water level guage, Leecom communication box"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Leecom water level guage, Leecom communication box",
+      "run_name": "Leecom",
+      "mean_sea_level": 6.716
     }
   ]
 }
