--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -52,6 +52,19 @@
       "run_name": "Leecom"
     },
     {
+      "stationId": "curw_kotikawatta",
+      "name": "Kotikawatta",
+      "station_meta": ["curw_kotikawatta", "Kotikawatta", 6.890585 , 80.802551, 0, "Leecom station with their own Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Kotikawatta",
+      "run_name": "Leecom"
+    },
+    {
       "stationId": "curw_hingurana",
       "name": "Hingurana",
       "station_meta": ["curw_hingurana", "Hingurana", 6.904552, 80.407895, 0, "Hingurana Station"],
