--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -283,6 +283,20 @@
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
       "mean_sea_level": 6.716
+    },
+    {
+      "stationId": "curw_wl_wellawatta",
+      "name": "Wellawatta",
+      "station_meta": ["curw_wl_wellawatta", "Wellawatta", 6.88041, 79.86208, 0, "Leecom water level guage, Leecom communication box"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Leecom water level guage, Leecom communication box",
+      "run_name": "Leecom",
+      "mean_sea_level": 6.922
     }
   ]
 }
