--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -169,6 +169,19 @@
       "run_name": "A&T Labs"
     },
     {
+      "stationId": "curw_kohuwala",
+      "name": "Kohuwala",
+      "station_meta": ["curw_kohuwala", "Kohuwala", 6.860887, 79.885825, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
+      "max_values": ["120", "1"],
+      "min_values": ["0", "0"],
+      "description": "A&T Communication Box, Texas Standard Rain Gauge",
+      "run_name": "A&T Labs"
+    },
+    {
       "stationId": "curw_hingurana",
       "name": "Hingurana",
       "station_meta": ["curw_hingurana", "Hingurana", 6.904552, 80.407895, 0, "Hingurana Station"],
