--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -365,6 +365,20 @@
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
       "mean_sea_level": 6.922
+    },
+    {
+      "stationId": "curw_wl_kitulgala",
+      "name": "Kitulgala",
+      "station_meta": ["curw_wl_kitulgala", "Kitulgala", 6.985569, 80.424258, 0, "Yantai water level guage, A&T communication box"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Yantai water level guage, A&T communication box",
+      "run_name": "Leecom",
+      "mean_sea_level": 67.586
     }
   ]
 }
