--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -378,7 +378,21 @@
       "min_values": ["0"],
       "description": "Yantai water level guage, A&T communication",
       "run_name": "A&T Labs",
-      "mean_sea_level": 67.586
+      "mean_sea_level": 12.586
+    },
+    {
+      "stationId": "curw_wl_ranwala",
+      "name": "Ranwala",
+      "station_meta": ["curw_wl_ranwala", "Ranwala", 6.890585 , 80.802551, 0, "Campbell water level guage, A&T communication"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Campbell water level guage, A&T communication",
+      "run_name": "A&T Labs",
+      "mean_sea_level": 16.872
     }
   ]
 }
