added mattakkuliya station

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -393,6 +393,20 @@
       "description": "Campbell water level guage, A&T communication",
       "run_name": "A&T Labs",
       "mean_sea_level": 16.872
+    },
+    {
+      "stationId": "curw_wl_mattakkuliya",
+      "name": "Mattakkuliya",
+      "station_meta": ["curw_wl_mattakkuliya", "Mattakkuliya", 6.980881 , 79.875169, 0, "Yantai water level guage, A&T communication"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Yantai water level guage, A&T communication",
+      "run_name": "A&T Labs",
+      "mean_sea_level": 7.820
     }
   ]
 }
