re-edited config

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -18,8 +18,8 @@
       "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -31,8 +31,8 @@
       "station_meta": ["curw_mahapallegama", "Mahapallegama", 7.169737, 80.258512, 0, "Mahapallegama station with standard Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tips"],
-      "units": ["mm", "oC", "mm"],
+      "variables": ["Precipitation", "Temperature", "Tick"],
+      "units": ["mm", "oC", "-"],
       "max_values": ["120", "40", "1"],
       "min_values": ["0", "0", "0"],
       "description": "Mahapallegama",
@@ -44,8 +44,8 @@
       "station_meta": ["curw_kottawa_dharmapala_north", "Kottawa North Dharmapala School", 6.865576, 79.958180, 0, "Kottawa North Dharmapala School"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tips", "WindSpeed", "WindDirection", "Humidity"],
-      "units": ["mm", "oC", "mm", "m/s", "degrees", "%"],
+      "variables": ["Precipitation", "Temperature", "Tick", "WindSpeed", "WindDirection", "Humidity"],
+      "units": ["mm", "oC", "-", "m/s", "degrees", "%"],
       "max_values": ["120", "40", "1", "30", "360", "100"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Kottawa North Dharmapala School",
@@ -57,8 +57,8 @@
       "station_meta": ["curw_kotikawatta", "Kotikawatta", 6.890585 , 80.802551, 0, "Leecom station with their own Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tips"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "mm"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
       "max_values": ["120", "40", "30", "360", "100", "1"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Kotikawatta",
@@ -70,8 +70,8 @@
       "station_meta": ["curw_hingurana", "Hingurana", 6.904552, 80.407895, 0, "Hingurana Station"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tips"],
-      "units": ["mm", "oC", "mm"],
+      "variables": ["Precipitation", "Temperature", "Tick"],
+      "units": ["mm", "oC", "-"],
       "max_values": ["120", "40", "1"],
       "min_values": ["0", "0", "0"],
       "description": "HINGURANA STATION",
@@ -83,8 +83,8 @@
       "station_meta": ["curw_waga", "Waga", 6.906780, 80.118275, 0, "Waga Station"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "WAGA STATION",
@@ -96,8 +96,8 @@
       "station_meta": ["curw_mutwal", "Mutwal", 6.95871 , 79.86090, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -109,8 +109,8 @@
       "station_meta": ["curw_malabe", "Malabe", 6.90396 , 79.95738, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -122,8 +122,8 @@
       "station_meta": ["curw_dickoya", "Dickoya", 6.8722 , 80.60312 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -135,8 +135,8 @@
       "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -148,8 +148,8 @@
       "station_meta": ["curw_mulleriyawa", "Mulleriyawa", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -161,8 +161,8 @@
       "station_meta": ["curw_attidiya", "Attidiya", 6.8458199, 79.8829689, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -174,8 +174,8 @@
       "station_meta": ["curw_kohuwala", "Kohuwala", 6.860887, 79.885825, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -258,8 +258,8 @@
       "station_meta": ["curw_urumewella", "Urumewella", 7.079348 , 80.348785 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -271,8 +271,8 @@
       "station_meta": ["curw_ws_aruwakkalu", "Aruwakkalu", 8.241336 , 79.819860, 0, "Leecom station, Aruwakkalu Sanitary Landfill"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tips"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "mm"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
       "max_values": ["120", "40", "30", "360", "100", "1"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Aruwakkalu Sanitary Landfill",
