--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -18,8 +18,8 @@
       "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -31,8 +31,8 @@
       "station_meta": ["curw_mahapallegama", "Mahapallegama", 7.169737, 80.258512, 0, "Mahapallegama station with standard Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tips"],
-      "units": ["mm", "oC", "mm"],
+      "variables": ["Precipitation", "Temperature", "Tick"],
+      "units": ["mm", "oC", "-"],
       "max_values": ["120", "40", "1"],
       "min_values": ["0", "0", "0"],
       "description": "Mahapallegama",
@@ -44,8 +44,8 @@
       "station_meta": ["curw_kottawa_dharmapala_north", "Kottawa North Dharmapala School", 6.865576, 79.958180, 0, "Kottawa North Dharmapala School"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tips", "WindSpeed", "WindDirection", "Humidity"],
-      "units": ["mm", "oC", "mm", "m/s", "degrees", "%"],
+      "variables": ["Precipitation", "Temperature", "Tick", "WindSpeed", "WindDirection", "Humidity"],
+      "units": ["mm", "oC", "-", "m/s", "degrees", "%"],
       "max_values": ["120", "40", "1", "30", "360", "100"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Kottawa North Dharmapala School",
@@ -54,28 +54,15 @@
     {
       "stationId": "curw_kotikawatta",
       "name": "Kotikawatta",
-      "station_meta": ["curw_kotikawatta", "Kotikawatta", 6.890585 , 80.802551, 0, "Leecom station with their own Rain Gauge"],
+      "station_meta": ["curw_kotikawatta", "Kotikawatta", 6.93494, 79.915356, 0, "Leecom station with their own Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tips"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "mm"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
       "max_values": ["120", "40", "30", "360", "100", "1"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Kotikawatta",
       "run_name": "Leecom"
-    },
-    {
-      "stationId": "curw_hingurana",
-      "name": "Hingurana",
-      "station_meta": ["curw_hingurana", "Hingurana", 6.904552, 80.407895, 0, "Hingurana Station"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "Tips"],
-      "units": ["mm", "oC", "mm"],
-      "max_values": ["120", "40", "1"],
-      "min_values": ["0", "0", "0"],
-      "description": "HINGURANA STATION",
-      "run_name": "A&T Labs"
     },
     {
       "stationId": "curw_waga",
@@ -83,8 +70,8 @@
       "station_meta": ["curw_waga", "Waga", 6.906780, 80.118275, 0, "Waga Station"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "WAGA STATION",
@@ -96,8 +83,8 @@
       "station_meta": ["curw_mutwal", "Mutwal", 6.95871 , 79.86090, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -109,8 +96,8 @@
       "station_meta": ["curw_malabe", "Malabe", 6.90396 , 79.95738, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -122,8 +109,8 @@
       "station_meta": ["curw_dickoya", "Dickoya", 6.8722 , 80.60312 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -135,8 +122,8 @@
       "station_meta": ["curw_ambewela", "Ambewela Farm", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -145,11 +132,11 @@
     {
       "stationId": "curw_mulleriyawa",
       "name": "Mulleriyawa",
-      "station_meta": ["curw_mulleriyawa", "Mulleriyawa", 6.890585 , 80.802551, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "station_meta": ["curw_mulleriyawa", "Mulleriyawa", 6.923571, 79.941176, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -161,8 +148,8 @@
       "station_meta": ["curw_attidiya", "Attidiya", 6.8458199, 79.8829689, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -174,8 +161,8 @@
       "station_meta": ["curw_kohuwala", "Kohuwala", 6.860887, 79.885825, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -255,11 +242,11 @@
     {
       "stationId": "curw_urumewella",
       "name": "Urumewella",
-      "station_meta": ["curw_urumewella", "Urumewella", 7.079348 , 80.348785 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "station_meta": ["curw_urumewella", "Urumewella", 7.079348, 80.348785 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Tips"],
-      "units": ["mm", "mm"],
+      "variables": ["Precipitation", "Tick"],
+      "units": ["mm", "-"],
       "max_values": ["120", "1"],
       "min_values": ["0", "0"],
       "description": "A&T Communication Box, Texas Standard Rain Gauge",
@@ -268,11 +255,11 @@
     {
       "stationId": "curw_ws_aruwakkalu",
       "name": "Aruwakkalu",
-      "station_meta": ["curw_ws_aruwakkalu", "Aruwakkalu", 8.241336 , 79.819860, 0, "Leecom station, Aruwakkalu Sanitary Landfill"],
+      "station_meta": ["curw_ws_aruwakkalu", "Aruwakkalu", 8.241336, 79.819860, 0, "Leecom station, Aruwakkalu Sanitary Landfill"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tips"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "mm"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
       "max_values": ["120", "40", "30", "360", "100", "1"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Aruwakkalu Sanitary Landfill",
@@ -283,7 +270,7 @@
     {
       "stationId": "curw_wl_test",
       "name": "Leecom WL Guage",
-      "station_meta": ["curw_wl_test", "Leecom WL Guage", 6.890585, 80.802551, 0, "Leecom water level guage, testing station"],
+      "station_meta": ["curw_wl_test", "Leecom WL Guage", 6.879243, 79.929304, 0, "Leecom water level guage, testing station"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -297,7 +284,7 @@
     {
       "stationId": "curw_wl_diyasaru_uyana",
       "name": "Diyasaru Uyana",
-      "station_meta": ["curw_wl_diyasaru_uyana", "Diyasaru Uyana", 6.890585 , 80.802551, 0, "Yantai water level guage, A&T communication"],
+      "station_meta": ["curw_wl_diyasaru_uyana", "Diyasaru Uyana", 6.878987, 79.930433, 0, "Yantai water level guage, A&T communication"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -326,7 +313,7 @@
     {
       "stationId": "curw_wl_ingurukade",
       "name": "Ingurukade",
-      "station_meta": ["curw_wl_ingurukade", "Ingurukade", 0.0 , 0.0, 0, "Leecom water level guage, Leecom communication box"],
+      "station_meta": ["curw_wl_ingurukade", "Ingurukade", 6.95101, 79.87467, 0, "Leecom water level guage, Leecom communication box"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -340,7 +327,7 @@
     {
       "stationId": "curw_wl_yakbedda",
       "name": "Yakbedda",
-      "station_meta": ["curw_wl_yakbedda", "Yakbedda", 0.0 , 0.0, 0, "Leecom water level guage, Leecom communication box"],
+      "station_meta": ["curw_wl_yakbedda", "Yakbedda", 6.92361, 79.89105, 0, "Leecom water level guage, Leecom communication box"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -354,7 +341,7 @@
     {
       "stationId": "curw_wl_wellampitiya",
       "name": "Wellampitiya",
-      "station_meta": ["curw_wl_wellampitiya", "Wellampitiya", 0.0 , 0.0, 0, "Leecom water level guage, Leecom communication box"],
+      "station_meta": ["curw_wl_wellampitiya", "Wellampitiya", 6.93721, 79.8973, 0, "Leecom water level guage, Leecom communication box"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -368,7 +355,7 @@
     {
       "stationId": "curw_wl_wellawatta",
       "name": "Wellawatta",
-      "station_meta": ["curw_wl_wellawatta", "Wellawatta", 6.88041 , 79.86208, 0, "Leecom water level guage, Leecom communication box"],
+      "station_meta": ["curw_wl_wellawatta", "Wellawatta", 6.88041, 79.86208, 0, "Leecom water level guage, Leecom communication box"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -396,7 +383,7 @@
     {
       "stationId": "curw_wl_ranwala",
       "name": "Ranwala Bridge",
-      "station_meta": ["curw_wl_ranwala", "Ranwala Bridge", 6.890585 , 80.802551, 0, "Campbell water level guage, A&T communication"],
+      "station_meta": ["curw_wl_ranwala", "Ranwala Bridge", 6.970685, 80.165118, 0, "Campbell water level guage, A&T communication"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
@@ -410,7 +397,7 @@
     {
       "stationId": "curw_wl_mattakkuliya",
       "name": "Mattakkuliya",
-      "station_meta": ["curw_wl_mattakkuliya", "Mattakkuliya", 6.980881 , 79.875169, 0, "Yantai water level guage, A&T communication"],
+      "station_meta": ["curw_wl_mattakkuliya", "Mattakkuliya", 6.980881, 79.875169, 0, "Yantai water level guage, A&T communication"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Waterlevel"],
